--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,11 @@
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE124</version>
         </dependency>
-       
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>       
     </dependencies>
     
 
